--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -7,7 +7,7 @@ nav a {
     text-decoration: none;
     padding: 20px;
     font-size: 16px;
-    font-style: sans-serif;
+    font-family: 'Mulish', sans-serif;
 }
 nav a:hover {
     color: rgb(255, 160, 160);
